# autotools_example

./: autogen.sh  configure.ac
doc/: README.md
man/: Makefile.am  example_binary_cxx.8
src/: Makefile.am
src/example/: Makefile.am  example_binary.c  example_binary_cxx.cpp
src/lib/: Makefile.am  example_c.c  example_c.h  example_cxx.cpp  example_cxx.h
